// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processes events in a specific month > buffers 1`] = `
Map {
  "302" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes events in a specific month > estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, statGroup: MC, operation: progh}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: progx}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: progk}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
}
`;

exports[`processes events in a specific month > inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "109" => {
      "cntr": 109,
      "inspType": "Insp1",
      "materialID": 63186,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialv",
      "time": 2018-02-02T10:09:10.000Z,
      "workorder": "workg",
    },
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 63186,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 63186,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialv",
      "time": 2018-02-02T10:02:10.000Z,
      "workorder": "workg",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 63186,
      "part": "part111",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialv",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "workg",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "308" => {
      "cntr": 308,
      "inspType": "Insp1",
      "materialID": 92455,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialx",
      "time": 2018-01-06T09:57:05.000Z,
      "workorder": "work1",
    },
    "307" => {
      "cntr": 307,
      "inspType": "Insp1",
      "materialID": 92455,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 92455,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialx",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "work1",
    },
    "209" => {
      "cntr": 209,
      "inspType": "Insp1",
      "materialID": 83004,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serial5",
      "time": 2018-01-31T10:03:10.000Z,
      "workorder": "worko",
    },
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 83004,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 83004,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serial5",
      "time": 2018-01-31T09:56:10.000Z,
      "workorder": "worko",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 83004,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serial5",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "worko",
    },
  },
}
`;

exports[`processes events in a specific month > material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqs" => [
      83004,
    ],
    "uniqf" => [
      63186,
    ],
    "uniqm" => [
      92455,
    ],
  },
  "matsById": Map {
    "83004" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:10.000Z,
      "jobUnique": "uniqs",
      "last_event": 2018-01-31T10:03:10.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 83004,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "63186" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:10.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:10.000Z,
      "jobUnique": "uniqf",
      "last_event": 2018-02-02T10:09:10.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 63186,
      "numProcesses": 2,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "92455" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-06T09:57:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:05.000Z,
      "jobUnique": "uniqm",
      "last_event": 2018-01-06T09:57:05.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 92455,
      "numProcesses": 4,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
  },
}
`;

exports[`processes events in a specific month > pallet cycles 1`] = `
Map {
  "palaa" => Map {
    "308" => {
      "active": -1,
      "cntr": 308,
      "x": 2018-01-06T09:50:05.000Z,
      "y": 44,
    },
  },
  "palbb" => Map {
    "209" => {
      "active": -1,
      "cntr": 209,
      "x": 2018-01-31T09:56:10.000Z,
      "y": 44,
    },
    "109" => {
      "active": -1,
      "cntr": 109,
      "x": 2018-02-02T10:02:10.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes events in a specific month > station cycles 1`] = `
Map {
  "306" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 306,
    "isLabor": true,
    "material": [
      {
        "face": "facei",
        "id": 92455,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialx",
        "uniq": "uniqm",
        "workorder": "work1",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-06T09:45:05.000Z,
    "y": 3,
  },
  "304" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 304,
    "isLabor": false,
    "material": [
      {
        "face": "facei",
        "id": 92455,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialx",
        "uniq": "uniqm",
        "workorder": "work1",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "progx",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-06T09:35:05.000Z,
    "y": 18,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "isLabor": true,
    "material": [
      {
        "face": "faceo",
        "id": 83004,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serial5",
        "uniq": "uniqs",
        "workorder": "worko",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  "300" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 300,
    "isLabor": true,
    "material": [
      {
        "face": "facei",
        "id": 92455,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialx",
        "uniq": "uniqm",
        "workorder": "work1",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-06T09:09:05.000Z,
    "y": 6,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "isLabor": false,
    "material": [
      {
        "face": "faceo",
        "id": 83004,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serial5",
        "uniq": "uniqs",
        "workorder": "worko",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progk",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "isLabor": true,
    "material": [
      {
        "face": "facee",
        "id": 63186,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serialv",
        "uniq": "uniqf",
        "workorder": "workg",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "isLabor": true,
    "material": [
      {
        "face": "faceo",
        "id": 83004,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serial5",
        "uniq": "uniqs",
        "workorder": "worko",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "isLabor": false,
    "material": [
      {
        "face": "facee",
        "id": 63186,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serialv",
        "uniq": "uniqf",
        "workorder": "workg",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progh",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "isLabor": true,
    "material": [
      {
        "face": "facee",
        "id": 63186,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serialv",
        "uniq": "uniqf",
        "workorder": "workg",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
}
`;

exports[`processes last 30 events > after filter - buffers 1`] = `
Map {
  "402" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-08T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes last 30 events > after filter - estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: progv}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part111}, statGroup: MC, operation: progz}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: prog4}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
}
`;

exports[`processes last 30 events > after filter - event counter 1`] = `409`;

exports[`processes last 30 events > after filter - inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "409" => {
      "cntr": 409,
      "inspType": "Insp1",
      "materialID": 77508,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialz",
      "time": 2018-02-08T09:51:10.000Z,
      "workorder": "workm",
    },
    "408" => {
      "cntr": 408,
      "inspType": "Insp1",
      "materialID": 77508,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 77508,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialz",
      "time": 2018-02-08T09:44:10.000Z,
      "workorder": "workm",
    },
    "407" => {
      "cntr": 407,
      "inspType": "Insp1",
      "materialID": 77508,
      "part": "part111",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialz",
      "time": 2018-02-08T09:44:05.000Z,
      "workorder": "workm",
    },
    "109" => {
      "cntr": 109,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:09:10.000Z,
      "workorder": "work7",
    },
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 70329,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:02:10.000Z,
      "workorder": "work7",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "work7",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "209" => {
      "cntr": 209,
      "inspType": "Insp1",
      "materialID": 48405,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialt",
      "time": 2018-01-31T10:03:10.000Z,
      "workorder": "workf",
    },
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 48405,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 48405,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialt",
      "time": 2018-01-31T09:56:10.000Z,
      "workorder": "workf",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 48405,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialt",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workf",
    },
  },
}
`;

exports[`processes last 30 events > after filter - material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqh" => [
      77508,
    ],
    "uniqi" => [
      70329,
    ],
    "uniqm" => [
      48405,
    ],
  },
  "matsById": Map {
    "70329" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:10.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:10.000Z,
      "jobUnique": "uniqi",
      "last_event": 2018-02-02T10:09:10.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 70329,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "48405" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:10.000Z,
      "jobUnique": "uniqm",
      "last_event": 2018-01-31T10:03:10.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 48405,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "77508" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-08T09:51:10.000Z,
        },
      },
      "completed_inspect_time": 2018-02-08T09:51:10.000Z,
      "jobUnique": "uniqh",
      "last_event": 2018-02-08T09:51:10.000Z,
      "last_unload_time": 2018-02-08T09:39:05.000Z,
      "materialID": 77508,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-08T09:39:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events > after filter - pallet cycles 1`] = `
Map {
  "palcc" => Map {
    "409" => {
      "active": -1,
      "cntr": 409,
      "x": 2018-02-08T09:44:10.000Z,
      "y": 44,
    },
  },
  "palbb" => Map {
    "209" => {
      "active": -1,
      "cntr": 209,
      "x": 2018-01-31T09:56:10.000Z,
      "y": 44,
    },
    "109" => {
      "active": -1,
      "cntr": 109,
      "x": 2018-02-02T10:02:10.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes last 30 events > after filter - station cycles 1`] = `
Map {
  "406" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 406,
    "isLabor": true,
    "material": [
      {
        "face": "facet",
        "id": 77508,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialz",
        "uniq": "uniqh",
        "workorder": "workm",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-08T09:39:05.000Z,
    "y": 3,
  },
  "404" => {
    "MAD_aboveMinutes": 0,
    "activeMinutes": 12,
    "cntr": 404,
    "isLabor": false,
    "material": [
      {
        "face": "facet",
        "id": 77508,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialz",
        "uniq": "uniqh",
        "workorder": "workm",
      },
    ],
    "medianCycleMinutes": 0,
    "operation": "progn",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-08T09:29:05.000Z,
    "y": 12,
  },
  "400" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 400,
    "isLabor": true,
    "material": [
      {
        "face": "facet",
        "id": 77508,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialz",
        "uniq": "uniqh",
        "workorder": "workm",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-08T09:09:05.000Z,
    "y": 6,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "isLabor": true,
    "material": [
      {
        "face": "facew",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialt",
        "uniq": "uniqm",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "isLabor": false,
    "material": [
      {
        "face": "facew",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialt",
        "uniq": "uniqm",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progv",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "isLabor": true,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "isLabor": true,
    "material": [
      {
        "face": "facew",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialt",
        "uniq": "uniqm",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "isLabor": false,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progz",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "isLabor": true,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
}
`;

exports[`processes last 30 events > after filter - tool use 1`] = `
Map {
  "{part: part222}, statGroup: MC, operation: progv}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.7833333333333333,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "7",
        },
      ],
    },
  ],
  "{part: part111}, statGroup: MC, operation: progz}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.5166666666666667,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "a",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "5",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: prog4}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.4,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "r",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.31666666666666665,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "n",
        },
      ],
    },
  ],
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - buffers 1`] = `
Map {
  "302" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: progv}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part111}, statGroup: MC, operation: progz}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: prog4}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - event counter 1`] = `308`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "109" => {
      "cntr": 109,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:09:10.000Z,
      "workorder": "work7",
    },
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 70329,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:02:10.000Z,
      "workorder": "work7",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "work7",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "308" => {
      "cntr": 308,
      "inspType": "Insp1",
      "materialID": 70517,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialw",
      "time": 2018-01-06T09:57:05.000Z,
      "workorder": "work9",
    },
    "307" => {
      "cntr": 307,
      "inspType": "Insp1",
      "materialID": 70517,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 70517,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialw",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "work9",
    },
    "209" => {
      "cntr": 209,
      "inspType": "Insp1",
      "materialID": 48405,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialt",
      "time": 2018-01-31T10:03:10.000Z,
      "workorder": "workf",
    },
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 48405,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 48405,
            "pallet": "6",
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialt",
      "time": 2018-01-31T09:56:10.000Z,
      "workorder": "workf",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 48405,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialt",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workf",
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqu" => [
      70517,
    ],
    "uniqi" => [
      70329,
    ],
    "uniqm" => [
      48405,
    ],
  },
  "matsById": Map {
    "70329" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:10.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:10.000Z,
      "jobUnique": "uniqi",
      "last_event": 2018-02-02T10:09:10.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 70329,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "70517" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-06T09:57:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:05.000Z,
      "jobUnique": "uniqu",
      "last_event": 2018-01-06T09:57:05.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 70517,
      "numProcesses": 1,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
    "48405" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:10.000Z,
      "jobUnique": "uniqm",
      "last_event": 2018-01-31T10:03:10.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 48405,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - pallet cycles 1`] = `
Map {
  "palaa" => Map {
    "308" => {
      "active": -1,
      "cntr": 308,
      "x": 2018-01-06T09:50:05.000Z,
      "y": 44,
    },
  },
  "palbb" => Map {
    "209" => {
      "active": -1,
      "cntr": 209,
      "x": 2018-01-31T09:56:10.000Z,
      "y": 44,
    },
    "109" => {
      "active": -1,
      "cntr": 109,
      "x": 2018-02-02T10:02:10.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - station cycles 1`] = `
Map {
  "306" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 306,
    "isLabor": true,
    "material": [
      {
        "face": "faceo",
        "id": 70517,
        "numproc": 1,
        "part": "part222",
        "proc": 2,
        "serial": "serialw",
        "uniq": "uniqu",
        "workorder": "work9",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-06T09:45:05.000Z,
    "y": 3,
  },
  "304" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 304,
    "isLabor": false,
    "material": [
      {
        "face": "faceo",
        "id": 70517,
        "numproc": 1,
        "part": "part222",
        "proc": 2,
        "serial": "serialw",
        "uniq": "uniqu",
        "workorder": "work9",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "prog4",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-06T09:35:05.000Z,
    "y": 18,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "isLabor": true,
    "material": [
      {
        "face": "facew",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialt",
        "uniq": "uniqm",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  "300" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 300,
    "isLabor": true,
    "material": [
      {
        "face": "faceo",
        "id": 70517,
        "numproc": 1,
        "part": "part222",
        "proc": 2,
        "serial": "serialw",
        "uniq": "uniqu",
        "workorder": "work9",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-06T09:09:05.000Z,
    "y": 6,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "isLabor": false,
    "material": [
      {
        "face": "facew",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialt",
        "uniq": "uniqm",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progv",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "isLabor": true,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "isLabor": true,
    "material": [
      {
        "face": "facew",
        "id": 48405,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialt",
        "uniq": "uniqm",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "isLabor": false,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progz",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "isLabor": true,
    "material": [
      {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - tool use 1`] = `
Map {
  "{part: part222}, statGroup: MC, operation: progv}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.7833333333333333,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "7",
        },
      ],
    },
  ],
  "{part: part111}, statGroup: MC, operation: progz}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.5166666666666667,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "a",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "5",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: prog4}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.4,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "r",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.31666666666666665,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "n",
        },
      ],
    },
  ],
}
`;
